[package]
name = "proxy_ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
socket2 = "0.5"
libc = "0.2"

[[bin]]
name = "proxy-server"
path = "src/server.rs"

[[bin]]
name = "proxy-client"
path = "src/client.rs"
